# mydevoirs

./: .gitignore  CHANGELOG  Makefile  README.md  WINDOWS_INSTALLER.md  pyproject.toml  run.py
.github/workflows/: main.yml
docs/: dev.md
mydevoirs/: agenda.py  app.py  main.py
tests/: test_agenda.py
