[tool.poetry]
name = "mydevoirs"
version = "1.3.0-manastria.1"
description = "La prise de devoirs enfin simple !"
authors = ["Manastria <manastria@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "mydevoirs"}]

[tool.poetry.dependencies]
python = "^3.11"
kivy = "*"
pony = "^0.7.11"
appdirs = "*"
"kivy-garden.filebrowser" = "*"
Pillow = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0rc1"
black = "*"
coverage = "*"
briefcase = "0.3.18"
mimesis = "*"
isort = "*"
freezegun = "*"
gitpython = "*"
toml = "*"
markupsafe = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
author = 'Manastria'
author_email = "manastria@users.noreply.github.com"
bundle = "coding.cacahuete"
license = "LGPL-3.0-or-later"
project_name = "mydevoirs"
url = "https://github.com/manastria/mydevoirs"
version = "1.3.0-manastria.1"

[tool.briefcase.app.mydevoirs]
description = "La prise de devoirs enfin simple !"
formal_name = "mydevoirs"
icon = "mydevoirs/data/icons/logo"
requires = [
  'kivy',
  'pony>=0.7.11,<0.8',
  'appdirs',
  'kivy-garden.filebrowser',
  'Pillow',
]
sources = ['mydevoirs']

[tool.briefcase.app.mydevoirs.macOS]
requires = []

[tool.briefcase.app.mydevoirs.linux]
requires = []
system_requires = ["language-pack-fr", "pulseaudio", "libmtdev1", "xclip", "libgl1", "libfontconfig1", "libxrender1"]

[tool.briefcase.app.mydevoirs.windows]
requires = ["docutils", "pygments", "pypiwin32", "kivy.deps.sdl2", "kivy.deps.glew", "kivy_deps.angle"]

# Mobile deployments
[tool.briefcase.app.mydevoirs.iOS]
requires = []

[tool.briefcase.app.mydevoirs.android]
requires = []

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
